JumpScript/tests/baselines/reference/typeParametersInStaticProperties.errors.txt
tests/cases/compiler/typeParametersInStaticProperties.jump(2,15): error TS2302: Static members cannot reference class type parameters.


==== tests/cases/compiler/typeParametersInStaticProperties.jump (1 errors) ====
    class foo<T> {
        static P: T;
                  ~
!!! error TS2302: Static members cannot reference class type parameters.
    } 